--- a/src/public/css/detail.css
+++ b/src/public/css/detail.css
@@ -3,45 +3,47 @@
 }
 
 .detail__content{
-    max-width: 1200px;
+    max-width: 1000px;
     width: 100%;
-    margin: 30px auto;
+    margin: 15px auto;
     display: flex;
-    gap: 20px;
+    gap: 10px;
 }
 
 .product__image{
     flex: 1;
-    min-height: 300px;
+    min-width: 100px;
     text-align: center;
 }
 
 .product__image img{
-    width: 100%;
+    width: 85%;
     height: auto;
+    margin: 40px auto;
 }
 
 .content--right{
     flex: 1;
     text-align: left;
-    min-width: 300px;
+    min-width: 150px;
     padding: 0 10px;
 }
 
 .product__name{
-    font-size: 36px;
-    margin: 0 20px;
+    font-size: 32px;
+    margin-top: 20px ;
 }
 
 .bland_name{
     font-size: 15px;
-    margin: 20px;
+    margin: 10px 0;
+    padding: 0;
 }
 
 .product__price{
-    font-size: 30px;
+    font-size: 25px;
     font-weight: 350;
-    margin: 20px;
+    margin: 10px ;
 }
 
 .action__button{
@@ -51,12 +53,12 @@
 .like-button {
     color: gray;
     /* いいねしてない時の色 */
-    width: 60px;
+    width: 40px;
     border: none;
     background: none;
-    font-size: 30px;
+    font-size: 25px;
     cursor: pointer;
-    margin: 0 20px;
+    margin: 0 10px;
 }
 
 .like-button.liked {
@@ -71,89 +73,110 @@
 }
 
 .comment-button{
-    width: 60px;
+    width: 40px;
     border: none;
     background: none;
-    font-size: 30px;
+    font-size: 25px;
     cursor: pointer;
-    margin: 0 20px;
+    margin: 0 10px;
 }
 
 .count{
-    font-size: 15px;
+    font-size: 12px;
     font-weight: bold;
-    margin: 5px;
+    margin: 3px;
 }
 
 .purchase__button-submit{
     display: inline-block;
-    max-width: 550px;
+    max-width: 400px;
     width: 100%;
     height: 40px;
     background-color: #FF5555;
     color: white;
-    font-size: 20px;
+    font-size: 15px;
     font-weight: bold;
-    padding: 5px;
-    margin: 20px 0;
+    padding: 8px;
+    margin: 10px;
     border: none;
     border-radius: 5px;
     text-align: center;
     cursor: pointer;
 }
 
+.purchase__disabled-submit{
+    display: inline-block;
+    max-width: 400px;
+    width: 100%;
+    height: 40px;
+    background-color: #dddd;
+    color: grey;
+    font-size: 15px;
+    font-weight: bold;
+    padding: 8px;
+    margin: 10px ;
+    border: none;
+    border-radius: 5px;
+    text-align: center;
+}
+
 .product__explanation,
 .product__information{
-    font-size: 30px;
-    margin: 20px;
+    font-size: 20px;
+    margin: 30px 10px;
 }
 
 .detail{
-    font-size: 16px;
-    margin: 20px;
+    font-size: 14px;
+    margin: 20px 10px;
 }
 
 .information__row{
     display: flex;
     gap: 40px;
-    margin: 10px 20px;
+    margin: 10px ;
     align-items: center;
 }
 
 .label{
-    font-size: 20px;
+    font-size: 16px;
     font-weight: bold;
 }
 
 .value{
     display: inline-block;
-    padding: 10px;
-    font-size: 18px;
+    width: 120px;
+    height: 30px;
+    padding: 3px;
+    text-align: center;
+    font-size: 16px;
     border: none;
     background-color: #dddd;
     border-radius: 30px;
 }
 
 .condition{
-    font-size: 18px;
+    font-size: 15px;
     align-items: center;
-    padding: 10px;
+    padding: 5px;
 }
 
 .comment__action{
-    margin: 10px 20px;
+    margin: 10px ;
 }
 
 .product__comment{
-    font-size: 25px;
+    font-size: 20px;
     color: #5F5F5F;
+    margin-top: 30px;
+    padding: 0;
 }
 
 .avatar{
     display: flex;
     align-items: center;
-    grid-column-gap: 20px;
-    margin: 15px 0;
+    grid-column-gap: 15px;
+    margin: 10px 0;
 }
 
 .comment--profile{
@@ -163,38 +186,38 @@
 }
 
 .comment--text{
-    max-width: 550px;
+    max-width: 400px;
     width: 100%;
-    padding: 10px;
-    background-color: #dddd;
+    padding: 8px;
+    background-color: #e9e9e9;
     border: none;
     border-radius: 5px;
 }
 
 .comment__action label{
     display: block;
-    font-size: 20px;
+    font-size: 16px;
     font-weight: bold;
     margin-top: 20px;
 }
 
 .product__comment-space{
     display: inline-block;
-    max-width: 550px;
+    max-width: 400px;
     width: 100%;
-    height: 200px;
+    height: 100px;
     border: 1px solid #5F5F5F;
     border-radius: 5px;
     margin-bottom: 20px;
 }
 
 .comment__button-submit {
-    max-width: 550px;
+    max-width: 400px;
     width: 100%;
     height: 40px;
     background-color: #FF5555;
     color: white;
-    font-size: 20px;
+    font-size: 16px;
     font-weight: bold;
     padding: 5px;
     margin: 20px 0;
@@ -202,6 +225,21 @@
     border-radius: 5px;
     text-align: center;
     cursor: pointer;
+}
+
+.comment__not-submit{
+    max-width: 400px;
+    width: 100%;
+    height: 40px;
+    background-color: #dddd;
+    color: gray;
+    font-size: 16px;
+    font-weight: bold;
+    padding: 5px;
+    margin: 20px 0;
+    border: none;
+    border-radius: 5px;
+    text-align: center;
 }
 
 @media screen and (min-width:768px) and (max-width:850px){
