--- a/src/public/css/listing.css
+++ b/src/public/css/listing.css
@@ -1,24 +1,24 @@
 .listing__content{
-    max-width: 700px;
+    max-width: 500px;
     width: 100%;
     margin: 0 auto;
-    padding: 20px;
+    padding: 10px;
 }
 
 .listing__ttl{
     text-align: center;
     font-family: 'Inter', sans-serif;
     font-weight: bold;
-    margin: 10px 0;
-    padding: 10px 0;
+    margin: 5px 0;
+    padding: 5px 0;
 }
 
 .product__img{
-    max-width: 680px;
+    max-width: 480px;
     width: 100%;
-    height: 250px;
-    margin: 10px 0;
-    padding: 10px;
+    height: 150px;
+    margin: 5px 0;
+    padding: 5px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -29,11 +29,16 @@
 
 .description-text{
     display: block;
-    font-size: 20px;
+    font-size: 16px;
     padding: 5px 0;
-    margin-top: 15px;
+    margin: 5px 0;
     text-align: left;
     font-weight: bold;
+}
+
+.description-text input{
+    font-size: 26px;
+    padding: 0 10px;
 }
 
 .image-upload-button{
@@ -52,11 +57,11 @@
 }
 
 .product-detail{
-    max-width: 680px;
+    max-width: 480px;
     width: 100%;
-    margin: 10px 0;
+    margin: 15px 0;
     padding: 10px 0 ;
-    font-size: 25px;
+    font-size: 20px;
     font-weight: bold;
     text-align: left;
     color: #5F5F5F;
@@ -64,7 +69,7 @@
 }
 
 .category__list{
-    margin: 20px 0;
+    margin: 15px 0;
 }
 
 input[type="checkbox"]{
@@ -78,28 +83,28 @@ input[type="checkbox"]:checked + span{
 
 .category__list label span{
     display: inline-block;
-    padding: 5px 18px;
-    margin: 15px 5px;
+    padding: 3px 15px;
+    margin: 10px 8px;
     text-align: center;
-    border: 3px solid #FF5555;
+    border: 2px solid #FF5555;
     border-radius: 30px;
     color: #FF5555;
-    font-size: 16px;
+    font-size: 14px;
     cursor: pointer;
 }
 
 .select-wrapper{
     position: relative;
-    max-width: 680px;
+    max-width: 480px;
     width: 100%;
-    margin: 20px 0;
+    margin: 15px 0;
 }
 
 .select-wrapper select{
     width: 100%;
-    padding: 13px;
-    margin: 10px 0;
-    font-size: 16px;
+    padding: 10px;
+    margin: 8px 0;
+    font-size: 14px;
     font-weight: bold;
     border: 1px solid #5F5F5F;
     border-radius: 5px;
@@ -122,14 +127,17 @@ input[type="checkbox"]:checked + span{
 
 .description__group input{
     width: 100%;
-    padding: 10px;
+    height: 30px;
+    padding: 5px;
     border: 1px solid #5F5F5F;
     border-radius: 5px;
 }
 
 .description__group textarea {
     width: 100%;
-    padding: 30px;
+    height: 70px;
+    padding: 5px;
+    font-size: 14px;
     border: 1px solid #5F5F5F;
     border-radius: 5px;
 }
@@ -140,10 +148,9 @@ input[type="number"]::-webkit-outer-spin-button{
     margin: 0;
 }
 
-
 .listing__button {
     width: 100%;
-    max-width: 680px;
+    max-width: 480px;
     margin: 0 auto;
 }
 
@@ -151,10 +158,10 @@ input[type="number"]::-webkit-outer-spin-button{
     width: 100%;
     background-color: #FF5555;
     color: white;
-    height: 35px;
+    height: 30px;
     border: 1px solid #FF5555;
     border-radius: 3px;
-    font-size: 15px;
+    font-size: 14px;
     font-weight: bold;
     cursor: pointer;
     margin: 30px 0;
