--- a/src/public/css/purchase.css
+++ b/src/public/css/purchase.css
@@ -1,21 +1,21 @@
 .purchase__content{
     max-width: 1300px;
     width: 100%;
-    margin: 40px auto;
     display: flex;
-    gap:30px;
+    gap:20px;
     justify-content: space-between;
 }
 
 .purchase-left{
     flex: 2;
-    min-width: 500px;
+    min-width: 600px;
+    margin: 30px;
 }
 
 .purchase-right{
     flex: 1;
-    margin: 0 auto;
-    min-width: 350px;
+    margin: 30px auto;
+    min-width: 500px;
 }
 
 .product{
@@ -24,32 +24,32 @@
 }
 
 .product__image img{
-    width: 200px;
-    height: 200px;
-    margin: 30px 0;
+    width: 150px;
+    height: 150px;
+    margin: 30px;
 }
 
 .product__info{
     display: flex;
     flex-direction: column;
-    margin: 20px 40px;
-    gap: 10px;
+    margin: 10px 20px;
+    gap: 5px;
 }
 
 .product__name{
-    font-size: 32px;
+    font-size: 25px;
     margin: 0;
 }
 
 .price{
-    font-size: 32px;
+    font-size: 25px;
     margin: 0;
 }
 
 .checkout{
-    margin: 40px;
+    margin: 30px auto;
     width: 350px;
-    height: 200px;
+    height: 150px;
     border: 1px solid #5f5f5f;
     display: flex;
     justify-content: center;
@@ -80,8 +80,8 @@
 
 .table-cell{
     flex: 1;
-    padding: 30px 18px;
-    font-size: 26px;
+    padding: 20px 15px;
+    font-size: 20px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -92,29 +92,29 @@
 }
 
 .payment {
-    padding: 20px;
+    padding: 10px;
     border-bottom: 1px solid #5f5f5f;
 }
 
 .payment__method{
-    width: 180px;
-    font-size: 25px;
+    width: 100px;
+    font-size: 18px;
     font-weight: bold;
-    margin: 0;
+    margin: 10px 20px;
 }
 
 .payment__method--select{
     display: block;
-    width: 300px;
-    padding: 10px;
-    margin: 30px 80px;
+    width: 200px;
+    padding: 8px;
+    margin: 20px 80px;
     border: 1px solid #5f5f5f;
     border-radius: 3px;
     cursor: pointer;
 }
 
 .address{
-    padding: 20px;
+    padding: 10px 20px;
     border-bottom: 1px solid #5f5f5f;
 }
 
@@ -125,16 +125,16 @@
 }
 
 .shopping_address{
-    width: 180px;
-    font-size: 25px;
+    width: 100px;
+    font-size: 18px;
     font-weight: bold;
     margin: 0;
 }
 
 .existing__address{
-    font-size: 20px;
+    font-size: 15px;
     font-weight: bold;
-    margin: 30px 80px;
+    margin: 20px 60px;
 }
 
 .existing__address p{
@@ -142,20 +142,22 @@
 }
 
 .edit-address a{
-    font-size: 16px;
-    padding: 8px 16px;
+    font-size: 15px;
+    padding: 0 10px;
     text-decoration: none;
     color: #0073cc;
 }
 
 .purchase__button{
+    width: 350px;
     text-align: center;
+    margin: 0 auto;
 }
 
 .purchase__button-submit{
-    width: 350px;
-    padding: 10px;
-    margin: 0 40px;
+    width: 100%;
+    height: 40px;
+    padding: 5px;
     background-color: #FF5555;
     color: white;
     border: none;
