--- a/src/public/css/setup.css
+++ b/src/public/css/setup.css
@@ -1,17 +1,15 @@
 .profile__content{
-    max-width: 700px;
+    max-width: 500px;
     width: 100%;
-    margin: 0 auto;
-    padding: 10px;
-}
-
-.profile__content-ttl{
-    max-width: 300px;
-    width: 100%;
-    height: 30px;
     margin: 0 auto;
 }
 
+.profile__content-ttl h1{
+    text-align: center;
+    font-size: 25px;
+    font-weight: bold;
+    margin: 15px auto;
+}
 
 input[type="file"].d-none {
     display: none;
@@ -21,39 +19,41 @@ input[type="file"].d-none {
     display: flex;
 }
 
-.user__image{
-    width: 150px;
-    height: 150px;
+.user__image img{
+    width: 75px;
+    height: 75px;
+    margin: 0 20px;
+
 }
 
 .select__avatar{
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 20px 40px;
+    margin: 15px 25px;
 }
 
 .select-button{
-    width: 180px;
-    height: 50px;
+    width: 130px;
+    height: 40px;
     border: 2px solid #FF5555;
-    border-radius: 10px;
+    border-radius: 8px;
     color: #FF5555;
-    padding: 10px 20px;
+    padding: 8px 10px;
     text-align: center;
-    font-size: 18px;
+    font-size: 14px;
     font-weight: bold;
     cursor: pointer;
 }
 
 .profile--form{
-    margin: 25px 0;
+    margin: 15px 0;
 }
 
 .form__label {
     display: block;
     text-align: left;
-    font-size: 20px;
+    font-size: 14px;
     font-weight: bold;
     margin-bottom: 10px;
 }
@@ -62,27 +62,27 @@ input[type="file"].d-none {
     width: 100%;
     border: 1px solid #c9c8c8;
     border-radius: 3px;
-    height: 35px;
-    padding: 10px;
+    height: 30px;
+    padding: 8px;
     box-sizing: border-box;
     margin-bottom: 15px;
 }
 
 .update__button{
-    max-width: 700px;
+    max-width: 500px;
     width: 100%;
     margin: 0 auto;
-    padding: 20px 0;
+    padding: 8px 0;
 }
 
 .update__button-submit{
     width: 100%;
     background-color: #FF5555;
     color: white;
-    height: 35px;
+    height: 30px;
     border: 1px solid #FF5555;
     border-radius: 3px;
-    font-size: 15px;
+    font-size: 14px;
     font-weight: bold;
     cursor: pointer;
 }
