--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -42,7 +42,7 @@ text-decoration: none;
     flex-wrap: wrap;
     gap: 15px;
     max-width: 1400px;
-    margin: 20px 30px;
+    margin: 20px 20px 0 40px;
     padding: 0;
 }
 
