--- a/src/public/css/thanks.css
+++ b/src/public/css/thanks.css
@@ -20,7 +20,7 @@
         text-align: center;
 }
 
-.message__button p{
+.message__button a{
     display: inline-block;
     width: 200px;
     padding: 15px;
@@ -29,6 +29,8 @@
     border-radius: 10px;
     font-size: 20px;
     font-weight: bold;
+    text-decoration: none;
+    color: black;
 }
 
 .resend{
