--- a/src/public/css/login.css
+++ b/src/public/css/login.css
@@ -66,7 +66,16 @@ body {
     gap: 15px;
 }
 
-.login__button {
+.login-button {
+    background-color: transparent;
+    border: none;
+    color: white;
+    cursor: pointer;
+    font-size: 18px;
+    white-space: nowrap;
+}
+
+.logout-button {
     background-color: transparent;
     border: none;
     color: white;
