--- a/src/public/css/show.css
+++ b/src/public/css/show.css
@@ -24,13 +24,26 @@ a {
 .user-info{
     flex:1;
     margin: 0;
-    align-items: center;
+    flex-direction: column;
+    align-items: flex-start;
 }
 
 .user_name{
     margin: 0;
     font-size: 25px;
     font-weight: bold;
+}
+
+.star-filled{
+    color: yellow;
+    font-size: 30px;
+    letter-spacing: 5px;
+}
+
+.star{
+    font-size: 30px;
+    letter-spacing: 5px;
+    color: #D9D9D9;
 }
 
 .image-space{
