--- a/src/public/css/show.css
+++ b/src/public/css/show.css
@@ -134,6 +134,54 @@ a {
     text-align: left;
 }
 
+.dealing{
+    min-width: 20px;
+    height: 20px;
+    background-color: red;
+    color: white;
+    border-radius: 50%;
+    padding: 3px 6px;
+    font-size: 12px;
+    font-weight: bold;
+    text-align: center;
+    text-align: center;
+    margin-left: 10px;
+}
+
+.deal-product{
+    width: 250px;
+    max-width: 100%;
+    margin: 20px 50px;
+    position: relative;
+
+}
+
+.deal-product img{
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+    aspect-ratio: 1/1;
+}
+
+.deal-product span{
+    position: absolute;
+    top: 0;
+    left: 0;
+    transform: translate(25%,25%);
+    background-color: red;
+    color: white;
+    border-radius: 50%;
+    padding: 3px 6px;
+    font-size: 12px;
+    font-weight: bold;
+    text-align: center;
+    min-width: 20px;
+    height: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 @media screen and (min-width:768px) and (max-width:850px){
     .image-space{
         flex-direction: column;
