--- a/src/public/css/message.css
+++ b/src/public/css/message.css
@@ -128,7 +128,7 @@ aside {
 }
 
 .my-message {
-    justify-content: flex-end;
+    align-items: flex-end;
 }
 
 .my-message .user-info {
@@ -137,7 +137,8 @@ aside {
     align-items: center;
 }
 
-.my-message .message-text {
+.my-message .message-text,
+.my-message {
     margin-left: auto;
 }
 
@@ -270,4 +271,248 @@ button {
     max-width: 150px;
     height: auto;
     display: none;
+}
+
+@media screen and (min-width:768px) and (max-width:850px) {
+.container {
+    max-width: 100%;
+    }
+
+aside {
+    width: 20%;
+    min-height: 100vh;
+    }
+
+.others-deal {
+    font-size: 20px;
+    font-weight: bold;
+    margin: 10px 0;
+    letter-spacing: 2px;
+    }
+
+.dealing {
+    width: 40%;
+    height: auto;
+    padding: 2px;
+    margin: 10px auto;
+    font-size: 10px;
+    }
+
+
+.message-content {
+    max-width: 100%;
+    padding: 5px 15px 0 15px;
+    padding-bottom: 50px;
+}
+
+.deal-header {
+    margin: 0 -15px;
+    padding: 0 20px;
+}
+
+.deal-title {
+    margin: 0;
+    font-size: 23px;
+
+}
+.message-content {
+    max-width: 100%;
+    padding: 5px 15px 0 15px;
+}
+
+.deal-header {
+    margin: 0 -15px;
+    padding: 0 20px;
+}
+
+.user-img img {
+    width: 60%;
+    height: auto;
+    padding: 0;
+    margin-bottom: 5px;
+}
+
+.deal-title {
+    font-size: 20px;
+
+}
+.dealing {
+    width: 70%;
+    height: auto;
+    padding: 4px;
+    margin: 10px auto;
+    border-radius: 7px;
+    font-size: 16px;
+}
+
+.message-content {
+    max-width: 100%;
+    padding: 10px 15px 0 15px;
+    padding-bottom: 50px;
+}
+
+.deal-header {
+    margin: 0 -15px;
+    padding: 0 20px;
+}
+
+.user-img img {
+    width: 55px;
+    height: auto;
+    margin-bottom: 10px;
+    padding: 0;
+}
+
+.deal-submit {
+    width: 20%;
+    height: auto;
+    font-size: 10px;
+    padding: 6px 3px;
+}
+
+.dummy-btn{
+    visibility: hidden;
+    display: inline-block;
+}
+
+.product-information {
+    display: flex;
+    margin: 0 -15px;
+    padding: 10px 15px;
+    border-bottom: #5F5F5F 2px solid
+}
+
+.product-img img {
+    width: 100px;
+    height: 100px;
+}
+
+.product-name {
+    margin: 15px 20px;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.product-price {
+    margin: 15px 20px;
+    font-size: 18px;
+}
+
+.buyer-user-img img,
+.seller-user-img img {
+    width: 30px;
+    height: 30px;
+}
+
+.user-info {
+    display: flex;
+    align-items: center;
+}
+.user-name {
+    font-size: 15px;
+    font-weight: bold;
+    margin: 10px;
+}
+
+.message-text {
+    width: fit-content;
+    padding: 2px 5px;
+    margin: 3px 0 0 0;
+    height: auto;
+    font-size: 12px;
+    background-color: #D9D9D9;
+    border: #D9D9D9 1px solid;
+    border-radius: 5px;
+}
+
+.message-action {
+    display: flex;
+    gap: 5px;
+    margin-top: 3px;
+    justify-content: flex-end;
+}
+
+.edit-button,
+.delete-btn {
+    display: flex;
+    background: none;
+    border: none;
+    color: #5F5F5F;
+    cursor: pointer;
+    padding: 0;
+    align-items: center;
+}
+
+.edit-button {
+    text-decoration: none;
+    font-size: 6px;
+}
+
+.delete-btn {
+    border: none;
+    font-size: 6px;
+}
+
+.error{
+    color: red;
+    font-size: 10px;
+    text-align: center;
+}
+
+.deal-message input {
+    width: 400px;
+    height: 23px;
+    padding: 2px 5px;
+    border: 1px solid #5F5F5F;
+    border-radius: 5px;
+    font-size: 10px;
+    font-weight: bold;
+}
+
+.deal-message label {
+    width: 35px;
+    height: 23px;
+    color: #FF5555;
+    border: 1px solid #FF5555;
+    border-radius: 5px;
+    font-weight: bold;
+    font-size: 10px;
+    padding: 2px 0;
+    margin-left: 3px;
+    cursor: pointer;
+}
+
+button {
+    border: none;
+    background-color: white;
+}
+
+.send-img {
+    width: 30px;
+    height: 20px;
+    cursor: pointer;
+}
+
+.message-footer {
+    position: fixed;
+    display: block;
+    bottom: 0;
+    left: 160px;
+    width: 600px;
+    background-color: #fff;
+    padding: 5px 10px;
+    display: flex;
+    justify-content: center;
+    z-index: 1000;
+}
+
+.d-none{
+    display: none;
+}
+
+.preview{
+    max-width: 150px;
+    height: auto;
+    display: none;
+}
 }
