--- a/src/public/css/review.css
+++ b/src/public/css/review.css
@@ -1,7 +1,7 @@
 .model {
     position: fixed;
     left: 55%;
-    top: 60%;
+    top: 65%;
     transform: translateX(-50%) translateY(-50%);
     width: fit-content;
     height: auto;
@@ -18,7 +18,7 @@
 }
 
 .model h2{
-    font-size: 26px;
+    font-size: 30px;
     border-bottom: black 1px solid;
     font-weight: normal;
     margin: 0;
@@ -61,4 +61,71 @@
     font-size: 15px;
     margin: 15px;
     margin-left: auto;
+}
+
+@media screen and (min-width:768px) and (max-width:850px){
+.model {
+    position: fixed;
+    left: 60%;
+    top: 60%;
+    transform: translateX(-50%) translateY(-50%);
+    width: fit-content;
+    height: auto;
+    display: none;
+    border: 1px solid black;
+    border-radius: 20px;
+    justify-content: center;
+    z-index: 1000;
+    background-color: #FDFCE6;
+}
+
+.model.show {
+    display: flex;
+}
+
+.model h2{
+    font-size: 22px;
+    border-bottom: black 1px solid;
+    font-weight: normal;
+    margin: 0;
+    padding: 15px;
+}
+
+.model p{
+    font-size: 12px;
+    color: #868686;
+    padding: 15px 15px 0 15px;
+    margin: 0;
+}
+
+.star-container{
+    padding: 0 15px;
+    border-bottom: 1px solid black;
+}
+
+.star{
+    display: inline-block;
+    font-size: 50px;
+    color: #d9d9d9;
+    cursor: pointer;
+}
+
+.model-content-btn{
+    display: flex;
+}
+
+.model-submit{
+    display: block;
+    margin-left: auto;
+    text-decoration: none;
+    width: 60px;
+    height: auto;
+    background-color: #FF8282;
+    color: white;
+    border-radius: 3px;
+    text-align: center;
+    font-size: 12px;
+    margin: 12px;
+    margin-left: auto;
+}
 }
