--- a/src/public/css/message.css
+++ b/src/public/css/message.css
@@ -1,5 +1,6 @@
 .container {
-    max-width: 100%;
+    width: 100%;
+    max-width: 1400px;
     display: flex;
     align-items: stretch;
 }
@@ -40,7 +41,7 @@ aside {
     text-align: center;
     border: #868686 1px solid;
     border-radius: 7px;
-    font-size: 20px;
+    font-size: 16px;
 }
 
 .other-orders a{
@@ -275,85 +276,53 @@ button {
 
 @media screen and (min-width:768px) and (max-width:850px) {
 .container {
+    width: 100%;
     max-width: 100%;
     }
 
 aside {
-    width: 20%;
+    width: 17%;
     min-height: 100vh;
     }
 
 .others-deal {
-    font-size: 20px;
+    font-size: 16px;
     font-weight: bold;
     margin: 10px 0;
     letter-spacing: 2px;
     }
 
 .dealing {
-    width: 40%;
+    width: 70%;
     height: auto;
-    padding: 2px;
+    padding: 5px;
     margin: 10px auto;
     font-size: 10px;
-    }
+    border-radius: 5px;
+}
 
+.message-content img{
+    max-width: 100%;
+    height: auto;
+    display: block;
+    object-fit: contain;
+}
 
 .message-content {
     max-width: 100%;
-    padding: 5px 15px 0 15px;
-    padding-bottom: 50px;
+    padding: 10px 0 50px 0;
 }
 
 .deal-header {
-    margin: 0 -15px;
-    padding: 0 20px;
+    width: 100%;
+    margin: 0;
+    padding: 0 15px;
 }
 
 .deal-title {
     margin: 0;
-    font-size: 23px;
+    font-size: 13px;
 
-}
-.message-content {
-    max-width: 100%;
-    padding: 5px 15px 0 15px;
-}
-
-.deal-header {
-    margin: 0 -15px;
-    padding: 0 20px;
-}
-
-.user-img img {
-    width: 60%;
-    height: auto;
-    padding: 0;
-    margin-bottom: 5px;
-}
-
-.deal-title {
-    font-size: 20px;
-
-}
-.dealing {
-    width: 70%;
-    height: auto;
-    padding: 4px;
-    margin: 10px auto;
-    border-radius: 7px;
-    font-size: 16px;
-}
-
-.message-content {
-    max-width: 100%;
-    padding: 10px 15px 0 15px;
-    padding-bottom: 50px;
-}
-
-.deal-header {
-    margin: 0 -15px;
-    padding: 0 20px;
 }
 
 .user-img img {
@@ -377,7 +346,8 @@ aside {
 
 .product-information {
     display: flex;
-    margin: 0 -15px;
+    width: 100%;
+    margin: 0;
     padding: 10px 15px;
     border-bottom: #5F5F5F 2px solid
 }
@@ -459,8 +429,27 @@ aside {
     text-align: center;
 }
 
+.message-footer {
+    position: fixed;
+    bottom: 0;
+    left: 17%;
+    width: 85%;
+    background-color: #fff;
+    padding: 5px 0;
+    display: flex;
+    z-index: 1000;
+    justify-content: center;
+}
+
+.deal-message{
+    width: 60%;
+    display: flex;
+    align-items: center;
+    gap: 5px;
+}
+
 .deal-message input {
-    width: 400px;
+    width: 100%;
     height: 23px;
     padding: 2px 5px;
     border: 1px solid #5F5F5F;
@@ -470,7 +459,7 @@ aside {
 }
 
 .deal-message label {
-    width: 35px;
+    width: 22%;
     height: 23px;
     color: #FF5555;
     border: 1px solid #FF5555;
@@ -479,31 +468,23 @@ aside {
     font-size: 10px;
     padding: 2px 0;
     margin-left: 3px;
+    text-align: center;
     cursor: pointer;
 }
 
 button {
     border: none;
+    display: flex;
+    align-items: center;
+    height: 100%;
+    padding: 0;
     background-color: white;
 }
 
 .send-img {
-    width: 30px;
+    width: 40px;
     height: 20px;
     cursor: pointer;
-}
-
-.message-footer {
-    position: fixed;
-    display: block;
-    bottom: 0;
-    left: 160px;
-    width: 600px;
-    background-color: #fff;
-    padding: 5px 10px;
-    display: flex;
-    justify-content: center;
-    z-index: 1000;
 }
 
 .d-none{
