--- a/src/public/css/review.css
+++ b/src/public/css/review.css
@@ -63,13 +63,14 @@
     margin-left: auto;
 }
 
-@media screen and (min-width:768px) and (max-width:850px){
+@media screen and (min-width:756px) and (max-width:850px){
 .model {
     position: fixed;
     left: 60%;
     top: 60%;
     transform: translateX(-50%) translateY(-50%);
-    width: fit-content;
+    width: 40%;
+    max-width: 750px;
     height: auto;
     display: none;
     border: 1px solid black;
